[gd_scene load_steps=2 format=2]

[ext_resource path="res://mods/debug/debug.gd" type="Script" id=1]

[node name="debug" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ui" type="CanvasLayer" parent="."]
layer = 10

[node name="menu" type="Panel" parent="ui"]
margin_right = 223.0
margin_bottom = 600.0

[node name="vb" type="VBoxContainer" parent="ui/menu"]
margin_right = 222.0
margin_bottom = 600.0
alignment = 1

[node name="Label3" type="Label" parent="ui/menu/vb"]
margin_top = 79.0
margin_right = 222.0
margin_bottom = 93.0
text = "Cheats"
align = 1
valign = 1

[node name="tf" type="CheckBox" parent="ui/menu/vb"]
margin_top = 97.0
margin_right = 222.0
margin_bottom = 121.0
text = "Enable True Fate (Difficulty)"

[node name="fl" type="CheckBox" parent="ui/menu/vb"]
margin_top = 125.0
margin_right = 222.0
margin_bottom = 149.0
text = "Get Flashlight (req to get one)"

[node name="ak" type="CheckBox" parent="ui/menu/vb"]
margin_top = 153.0
margin_right = 222.0
margin_bottom = 177.0
text = "Get Ak47 (inv only)"

[node name="ih" type="CheckBox" parent="ui/menu/vb"]
margin_top = 181.0
margin_right = 222.0
margin_bottom = 205.0
text = "Infinite Health (broken)"

[node name="is" type="CheckBox" parent="ui/menu/vb"]
margin_top = 209.0
margin_right = 222.0
margin_bottom = 233.0
text = "Infinite Stamina (broken)"

[node name="ia" type="CheckBox" parent="ui/menu/vb"]
margin_top = 237.0
margin_right = 222.0
margin_bottom = 261.0
text = "Infinite Ammo (broken)"

[node name="Label2" type="Label" parent="ui/menu/vb"]
margin_top = 265.0
margin_right = 222.0
margin_bottom = 279.0
text = "Room Loader"
align = 1
valign = 1

[node name="room1" type="CheckBox" parent="ui/menu/vb"]
margin_top = 283.0
margin_right = 222.0
margin_bottom = 307.0
text = "room1 (broken)"

[node name="room2" type="CheckBox" parent="ui/menu/vb"]
margin_top = 311.0
margin_right = 222.0
margin_bottom = 335.0
text = "room2 (iffy)"

[node name="room3" type="CheckBox" parent="ui/menu/vb"]
margin_top = 339.0
margin_right = 222.0
margin_bottom = 363.0
text = "room3 (iffy)"

[node name="room4" type="CheckBox" parent="ui/menu/vb"]
margin_top = 367.0
margin_right = 222.0
margin_bottom = 391.0
text = "room4 (crash)"

[node name="room5" type="CheckBox" parent="ui/menu/vb"]
margin_top = 395.0
margin_right = 222.0
margin_bottom = 419.0
text = "room5 (untested)"

[node name="room6" type="CheckBox" parent="ui/menu/vb"]
margin_top = 423.0
margin_right = 222.0
margin_bottom = 447.0
text = "room6 (untested)"

[node name="room7" type="CheckBox" parent="ui/menu/vb"]
margin_top = 451.0
margin_right = 222.0
margin_bottom = 475.0
text = "room7 (req to get here)"

[node name="Label4" type="Label" parent="ui/menu/vb"]
margin_top = 479.0
margin_right = 222.0
margin_bottom = 493.0
text = "Resriction Bypasser"
align = 1
valign = 1

[node name="end" type="CheckBox" parent="ui/menu/vb"]
margin_top = 497.0
margin_right = 222.0
margin_bottom = 521.0
text = "Disable End (to get to room7)"

[connection signal="pressed" from="ui/menu/vb/tf" to="." method="_on_tf_pressed"]
[connection signal="pressed" from="ui/menu/vb/fl" to="." method="_on_fl_pressed"]
[connection signal="pressed" from="ui/menu/vb/ak" to="." method="_on_ak_pressed"]
[connection signal="pressed" from="ui/menu/vb/ih" to="." method="_on_ih_pressed"]
[connection signal="pressed" from="ui/menu/vb/is" to="." method="_on_is_pressed"]
[connection signal="pressed" from="ui/menu/vb/ia" to="." method="_on_ia_pressed"]
[connection signal="pressed" from="ui/menu/vb/room1" to="." method="_on_room1_pressed"]
[connection signal="pressed" from="ui/menu/vb/room2" to="." method="_on_room2_pressed"]
[connection signal="pressed" from="ui/menu/vb/room3" to="." method="_on_room3_pressed"]
[connection signal="pressed" from="ui/menu/vb/room4" to="." method="_on_room4_pressed"]
[connection signal="pressed" from="ui/menu/vb/room5" to="." method="_on_room5_pressed"]
[connection signal="pressed" from="ui/menu/vb/room6" to="." method="_on_room6_pressed"]
[connection signal="pressed" from="ui/menu/vb/room7" to="." method="_on_room7_pressed"]
[connection signal="pressed" from="ui/menu/vb/end" to="." method="_on_end_pressed"]
